[gd_scene load_steps=40 format=3 uid="uid://ci4t2wu63ld5w"]

[ext_resource type="Script" uid="uid://21h6q20273ak" path="res://Scripts/Worm.gd" id="1_3cux1"]
[ext_resource type="Texture2D" uid="uid://ck1ctt1kd05p5" path="res://Assets/Pixelarium - Enemy Pack1 - Free Version/Slime/Blue Slime/spr_Blue_slime_death.png" id="2_yu6t8"]
[ext_resource type="Texture2D" uid="uid://b360ik2a5jt6e" path="res://Assets/Pixelarium - Enemy Pack1 - Free Version/Slime/Blue Slime/spr_Blue_slime_idle.png" id="3_xhofo"]
[ext_resource type="Texture2D" uid="uid://bx1rmgf8ldl63" path="res://Assets/Pixelarium - Enemy Pack1 - Free Version/Slime/Blue Slime/spr_Blue_slime_hurt.png" id="4_mo4a2"]
[ext_resource type="Texture2D" uid="uid://crwgypon88lna" path="res://Assets/Pixelarium - Enemy Pack1 - Free Version/Slime/Blue Slime/spr_Blue_slime_walk.png" id="5_kon5m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_chk72"]
atlas = ExtResource("2_yu6t8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_buq0u"]
atlas = ExtResource("2_yu6t8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mot2s"]
atlas = ExtResource("2_yu6t8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c65id"]
atlas = ExtResource("2_yu6t8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snk2k"]
atlas = ExtResource("2_yu6t8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncm8k"]
atlas = ExtResource("2_yu6t8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxry5"]
atlas = ExtResource("2_yu6t8")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ib3"]
atlas = ExtResource("2_yu6t8")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_weapo"]
atlas = ExtResource("2_yu6t8")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wg6wl"]
atlas = ExtResource("2_yu6t8")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehoud"]
atlas = ExtResource("2_yu6t8")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y65s5"]
atlas = ExtResource("2_yu6t8")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfrd"]
atlas = ExtResource("2_yu6t8")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy8j2"]
atlas = ExtResource("2_yu6t8")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6qv3"]
atlas = ExtResource("2_yu6t8")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ns7"]
atlas = ExtResource("3_xhofo")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qrca"]
atlas = ExtResource("3_xhofo")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vohd5"]
atlas = ExtResource("3_xhofo")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkkv8"]
atlas = ExtResource("3_xhofo")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_asple"]
atlas = ExtResource("3_xhofo")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43ky6"]
atlas = ExtResource("3_xhofo")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhoxr"]
atlas = ExtResource("4_mo4a2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbv3a"]
atlas = ExtResource("4_mo4a2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl8jq"]
atlas = ExtResource("4_mo4a2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lbo1"]
atlas = ExtResource("4_mo4a2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11oxf"]
atlas = ExtResource("5_kon5m")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfkgd"]
atlas = ExtResource("5_kon5m")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe8f5"]
atlas = ExtResource("5_kon5m")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srcy3"]
atlas = ExtResource("5_kon5m")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3kkv"]
atlas = ExtResource("5_kon5m")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk0gg"]
atlas = ExtResource("5_kon5m")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8uf12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chk72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buq0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mot2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c65id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snk2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncm8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxry5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_weapo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wg6wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehoud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y65s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy8j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6qv3")
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ns7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qrca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vohd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkkv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asple")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ky6")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhoxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbv3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl8jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lbo1")
}],
"loop": false,
"name": &"take_damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11oxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfkgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe8f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srcy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3kkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk0gg")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f0kj"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wovta"]
radius = 63.0079

[node name="Worm" type="CharacterBody2D" groups=["enemies"]]
platform_floor_layers = 4294967294
script = ExtResource("1_3cux1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 1
sprite_frames = SubResource("SpriteFrames_8uf12")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1f0kj")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource("CircleShape2D_wovta")

[node name="SpawnInvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ContactDamageCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
